<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/edit_unit_conv"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:singleLine="true"
        android:layout_marginTop="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_unit_from"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_from"
            android:layout_marginTop="10dp"
            android:layout_marginStart="15dp"/>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/from_radiogroup"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:layout_marginStart="5dp">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radiobutton_centimeter_from"
                android:text="@string/radiobutton_centimeter"
                android:checked="true"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radiobutton_meter_from"
                android:text="@string/radiobutton_meter" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radiobutton_feet_from"
                android:text="@string/radiobutton_feet"
                />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radiobutton_mile_from"
                android:text="@string/radiobutton_miles" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radiobutton_kilometer_from"
                android:text="@string/radiobutton_kilometers" />

        </RadioGroup>

        <TextView
            android:id="@+id/text_unit_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_to"
            android:layout_marginTop="10dp"
            android:layout_marginStart="15dp"/>
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/to_radiogroup"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:layout_marginStart="5dp">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radiobutton_centimeter_to"
                android:text="@string/radiobutton_centimeter"
                android:checked="true"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radiobutton_meter_to"
                android:text="@string/radiobutton_meter" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radiobutton_feet_to"
                android:text="@string/radiobutton_feet"
                />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radiobutton_mile_to"
                android:text="@string/radiobutton_miles" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radiobutton_kilometer_to"
                android:text="@string/radiobutton_kilometers" />

        </RadioGroup>

    </LinearLayout>

    <Button
        android:id="@+id/button_unit_conv"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:text="@string/button_conv"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/text_unit_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_result"
        android:layout_marginTop="10dp"
        android:layout_marginStart="15dp"/>

</LinearLayout>